--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}通信対戦デモ{% endblock %}</title>
-    
-    <style>
-        /* ここにスタイルを書く */
-    </style>
-    {% block head %}{% endblock %}
+  <meta charset="UTF-8">
+  <title>{% block title %}通信対戦デモ{% endblock %}</title>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 </head>
-
 <body>
-    {% block body %}{% endblock %}
+  {% block content %}{% endblock %}
 </body>
-
 </html>
