--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,8 +13,13 @@
 
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
-  const socket = io();
+  //const socket = io();
+  const socket = io(window.location.origin);
 
+  socket.on("connect", () => {
+    console.log("✅ 接続成功");
+  });
+  
   // メッセージ受信
   socket.on("message", (data) => {
     const log = document.getElementById("log");
