--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,9 @@
 {% block title %}通信対戦掲示板{% endblock %}
 {% block content %}
 
-
+<!--
 <!-- 受信エリア -->
-<!-- <div id="log" style="border:1px solid #333; padding:10px; width:400px; height:300px; overflow-y:scroll;">
+<div id="log" style="border:1px solid #333; padding:10px; width:400px; height:300px; overflow-y:scroll;">
 </div>
 
 <a href="{{ url_for('main.game') }}"><button class="btn">ゲームを開始する</button></a>
@@ -22,7 +22,7 @@
 <button onclick="sendMessage()">送信</button>
 -->
 
-<!-- 
+
 <div class="green-box">
   <a href="/me" data-desc="私の自己紹介ページです。">・me</a>
   <a href="/temp" data-desc="仮のリンクです。">・仮</a>
@@ -83,8 +83,8 @@
   });
 </script>
 {% endblock %}
--->
 
+<!--
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -165,13 +165,13 @@
 </head>
 <body>
 
-  <!-- 赤いボックス -->
+
   <div class="red-box">
     *last update: 2005/11/11<br>
     ブログ設置。しただけ。
   </div>
 
-  <!-- 青いリンクボックス -->
+
   <div class="blue-box">
     <a href="/issues" data-desc="課題に関するページです。">*issues</a>
     <a href="/songs" data-desc="楽曲紹介のページです。">*songs</a>
@@ -181,7 +181,7 @@
     <a href="/notes" data-desc="メモやノートです。">*notes</a>
   </div>
 
-  <!-- 説明ボックス -->
+
   <div class="desc-box" id="desc-box">
     カーソルを合わせると説明がここに表示されます。
   </div>
@@ -245,3 +245,4 @@
   </script>
 </body>
 </html>
+-->
