Fix socketio init and update requirements

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -77,7 +77,7 @@
     });
 
     socket.on("game_start", () => {
-      window.location.href = "/game1.html";
+      window.location.href = "/game1";
     });
   </script>
 </body>
