--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -40,6 +40,7 @@
 
     socket.on("role", data => {
       isLeader = data.isLeader;
+      console.log("role 受信 : ", data);
       if(isLeader){
         status.textContent = "あなたは親です。カードを2枚選んでください。";
         // 親だけがカードを生成＆表示
