--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -36,11 +36,12 @@
     let cardNumbers = [];
 
     // ゲーム参加
-    socket.emit("join_game", { password: currentPassword });
+    //socket.emit("join_game", { password: currentPassword });
 
     socket.on("role", data => {
       isLeader = data.isLeader;
       console.log("role 受信 : ", data);
+      console.log("isleader : ", isLeader);
       if(isLeader){
         status.textContent = "あなたは親です。カードを2枚選んでください。";
         // 親だけがカードを生成＆表示
