Fix socketio init and update requirements

--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -23,7 +23,10 @@
   <button id="submitBtn" disabled>選択を送信</button>
   <p id="status"></p>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <!-- <script src="/socket.io/socket.io.js"></script> -->
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-3Oq+e1+Ssqn1HULICwhf66A1VpzwuNFuIBqmoeZaZX6mE6oPD58Ll35H5T6KQJY1" crossorigin="anonymous"></script>
+
+
   <script>
     const socket = io();
     const cardsDiv = document.getElementById("cards");
