Fix socketio init and update requirements

--- a/app/templates/game1.html
+++ b/app/templates/game1.html
@@ -24,7 +24,7 @@
   <p id="status"></p>
 
   <!-- <script src="/socket.io/socket.io.js"></script> -->
-  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-3Oq+e1+Ssqn1HULICwhf66A1VpzwuNFuIBqmoeZaZX6mE6oPD58Ll35H5T6KQJY1" crossorigin="anonymous"></script>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 
 
   <script>
