--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>オンラインゲーム ロビー</title>
+  <title>ロビー</title>
   <style>
     body { font-family: sans-serif; }
     #login, #lobby { display: none; }
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <h1>オンラインゲーム</h1>
+  <h1>ロビー</h1>
 
   <div id="login">
     <input type="text" id="password" placeholder="あいことばを入力">
