--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,14 +34,12 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      width: 300px;
-      height: 200px;
-      background-color: #8daee3;
-      border: 1px solid #5a82c3;
+      width: 100px;
+      height: 20px;
       padding: 10px;
       box-sizing: border-box;
       font-size: 16px;
-      color: white;
+      color: rgb(0, 0, 0);
     }
   </style>
   
