--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,10 +8,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>西暦2525年</title>
-  <meta name="description" content="ユーザー同士で通信対戦ゲームをプレイできる掲示板サイト。図形操作、オンライン対戦、ブログ機能付き。">
+  <title>西暦2025年</title>
+  <meta name="description" content="西暦2025に建てられたサイト。">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="https://html-mq6q.onrender.com/">
+  <meta name="keywords" content="ゲーム,オンライン,心理ゲーム,DOUBLE MINE,2525年">
 </head>
 
 <script type="application/ld+json">
@@ -162,6 +163,17 @@
       /* margin: 10px; */
       font-size: 13px;
       border: 3px solid rgb(0, 0, 0);
+    }
+
+    .doubleMine-box a {
+      display: inline-block;     /* ブロック化して中央揃え */
+      margin-top: 15px;          /* 図形下との余白 */
+      padding: 8px 16px;
+      text-decoration: none;
+      background-color: #ffffff;
+      color: rgb(0, 255, 51);
+      font-weight: bold;
+      border-radius: 5px;
     }
   </style>
 
