--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,10 +6,11 @@
 
 {% block content %}
 
+<!-- SEO -->
 <head>
   <meta charset="utf-8">
-  <title>西暦2025年</title>
-  <meta name="description" content="西暦2025に建てられたサイト。">
+  <title>西暦2025年 -DOUBLE MINE-</title>
+  <meta name="description" content="西暦2025に建てられたサイト。DOUBLE MINEは心理ゲームで、攻撃側と守備側に分かれて遊べるオンラインゲームです。">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="canonical" href="https://html-mq6q.onrender.com/">
   <meta name="keywords" content="ゲーム,オンライン,心理ゲーム,DOUBLE MINE,2525年">
@@ -227,7 +228,7 @@
   守っているカード以外のカードを選択すると、カードに書かれている数字の得点が入ります。
   交互に行い、先に40PT取得したほうの勝利です。<br>
   <br>
-  <a href="/game">Play</a>
+  <a href="/game">DOUBLE MINEをPlay</a>
 </div>
 
 
